log
Wed 24 Apr 2024 03:06:09 AM UTC: 
 tests:  0|6
total_score: 0/70
f618a95
Wed 24 Apr 2024 03:52:22 AM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:10: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   62 |     free(map);
      |          ^~~
      |          mapa
hashmap.c:62:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
69b7299
Wed 24 Apr 2024 03:52:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:68:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   68 |   map->current = -1;
      |   ^~~
      |   mapa
hashmap.c:68:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
18a4407
Wed 24 Apr 2024 03:52:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dda8df5
Wed 24 Apr 2024 04:05:55 AM UTC: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  1|5
total_score: 10/70
8762166
Wed 24 Apr 2024 04:06:32 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
920cc99
Wed 24 Apr 2024 04:24:19 AM UTC: 
 hashmap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:134:14: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
  134 |       return NUll;
      |              ^~~~
      |              NULL
hashmap.c:134:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1554186
Wed 24 Apr 2024 04:24:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
6c8c04a
Wed 24 Apr 2024 04:25:35 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
0a0387b
Wed 24 Apr 2024 04:26:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:134:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  134 |       return ; // SI SE LLEGO AL FINAL DEL ARREGLO.
      |       ^~~~~~
hashmap.c:119:8: note: declared here
  119 | Pair * searchMap(HashMap * map,  char * key){
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1550779
Wed 24 Apr 2024 04:26:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
b5b5c55
Wed 24 Apr 2024 04:29:22 AM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
8ea02ea
Wed 24 Apr 2024 04:39:28 AM UTC: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
fa06f0a
Wed 24 Apr 2024 04:45:58 AM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
a37dd52
Wed 24 Apr 2024 04:47:48 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|3
total_score: 40/70
4c8ae0b
